test(DoubleClickMethodIntegrationTests): implemented working integration tests for double click method, updated single click integration tests to validate whether element actually got clicked

--- a/TestAssets/0.html
+++ b/TestAssets/0.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 
+<head>
+    <script>
+        function onClick() {
+            let element = document.getElementById("button")
+            element.innerText = "clicked!"
+        }
+
+        function doubleClick() {
+            let element = document.getElementById("doubleclick")
+            element.innerHTML += "i"
+        }
+
+    </script>
+</head>
+
 <body value="">
+    <button id="doubleclick" onclick="doubleClick()"></button>
+    <button id="button" onclick="onClick()"></button>
     <input id="findElementByInnerText" type="text" value="">
 </body>
 
